k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      serviceAccountName: grafana
      securityContext:
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472
      containers:
      - name: grafana
        image: grafana/grafana:11.0.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        volumeMounts:
        - name: datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: dashboards-provider
          mountPath: /etc/grafana/provisioning/dashboards
        - name: dashboard-gke
          mountPath: /var/lib/grafana/dashboards
      volumes:
      - name: datasources
        configMap:
          name: grafana-datasources
          items:
          - key: datasources.yaml
            path: datasources.yaml
      - name: dashboards-provider
        configMap:
          name: grafana-dashboards-provider
          items:
          - key: dashboards.yaml
            path: dashboards.yaml
      - name: dashboard-gke
        configMap:
          name: grafana-dashboard-gke
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "grafana-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - port: 3000
    targetPort: 3000
