k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gke-svc
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: hello-gke
  ports:
  - port: 80
    targetPort: 8080
