k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gke-private-demo-ingress-ip
    networking.gke.io/managed-certificates: grafana-cert
    compute.googleapis.com/security-policy: gke-private-demo-threat-policy
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: gcp-gke.techcloudup.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
